[package]
name = "cumulus-client-cli"
version = "0.1.0"
authors = ["Parity Technologies <admin@parity.io>"]
edition = "2021"

[dependencies]
structopt = "0.3.3"

# Substrate dependencies
sc-cli = { git = "https://github.com/rajesh-nodle/substrate.git", branch = "shamb0/test/polkadot-v0.9.13" }
sc-service = { git = "https://github.com/rajesh-nodle/substrate.git", branch = "shamb0/test/polkadot-v0.9.13" }
